# sam2_trt_inference

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md  generate_decoder_trt.sh  generate_trt.sh
cmake/: FindTensorRT.cmake
docker/: Dockerfile  build_and_run.sh
include/: sam2_decoder.hpp  sam2_encoder.hpp  sam2_image_inference.hpp  utils.hpp
include/cuda_utils/: cuda_check_error.hpp  cuda_unique_ptr.hpp  stream_unique_ptr.hpp
include/tensorrt_common/: logger.hpp  simple_profiler.hpp  tensorrt_common.hpp
python/trt_sam2/: __init__.py
sample_data/bboxes/: 00001.txt  00107.txt
src/: main.cpp  sam2_ctypes.cpp  sam2_decoder.cpp  sam2_encoder.cpp  sam2_image_inference.cpp  utils.cpp
src/tensorrt_common/: simple_profiler.cpp  tensorrt_common.cpp
tools/: generate_encoder_trt.sh
